css/styles.css
/* ... */
.breadcrumb-text h2 {
	font-size: 60px;
	color: #ffffff;
	text-shadow: 1px 1px 2px black;
	font-weight: 600;
	text-transform: uppercase;
	margin-top: 0px;
}

.breadcrumb-text .bt-option a {
	font-size: 18px;
	color: #ffffff;
	text-shadow: 1px 1px 2px black;
	font-weight: 700;
	display: inline-block;
	position: relative;
	margin-right: 20px;
}

.breadcrumb-text .bt-option a:after {
	position: absolute;
	right: -14px;
	top: 6px;
	font-family: "FontAwesome";
	content: "";
	font-size: 13px;
	font-weight: 400;
}

.breadcrumb-text .bt-option span {
	font-size: 18px;
	color: #fae102;
	text-shadow: 1px 1px 2px black;
	font-weight: 700;
}

/*---------------------
  Careers Section
-----------------------*/

.careers-text {
	background: #151515;
	padding: 100px 100px 0;
}

.careers-text .careers-desc {
	color: #ffffff;
	font-size: 20px;
}

.careers-text .careers-desc h1 {
	font-size: 36px;
	color: #fae102;
	text-align: center;
	text-shadow: 1px 1px 2px black;
	font-weight: 700;
	text-transform: uppercase;
	margin: 20px 0 40px;
}

.careers-text .careers-desc h2 {
	font-size: 30px;
	color: #fae102;
	text-shadow: 1px 1px 2px black;
	font-weight: 700;
	text-transform: uppercase;
	margin: 20px 0;
}

.careers-text .careers-desc h3,h4 {
	color: #ffffff;
	margin: 15px 0;
}


/*---------------------
  About Us Section
-----------------------*/

.about-video {
	height: 640px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
}

.about-video .play-btn {
	display: inline-block;
	height: 70px;
	width: 70px;
	background: #fae102;
	border-radius: 50%;
	line-height: 70px;
	text-align: center;
	font-size: 36px;
	color: #ffffff;
}

.about-text {
	background: #000000;
	height: 640px;
	padding: 120px 70px 0 70px;
}

.about-text .section-title {
	text-align: left;
	margin-bottom: 30px;
}

.about-text .at-desc {
	margin-bottom: 27px;
}

.about-text .at-desc p {
	color: #c4c4c4;
}

.about-text .about-bar .ab-item {
	margin-bottom: 34px;
}

.about-text .about-bar .ab-item p {
	color: #ffffff;
	margin-bottom: 13px;
}

.about-text .about-bar .ab-item .barfiller {
	background: #2d2d2d;
	height: 5px;
	border: none;
	margin-bottom: 0;
}

.about-text .about-bar .ab-item .barfiller .tip {
	margin-top: 0;
	padding: 0;
	font-size: 14px;
	color: #ffffff;
	background: transparent;
	position: initial !important;
	float: right;
	margin-top: -40px;
}

.about-text .about-bar .ab-item .barfiller .tip:after {
	display: none;
}

.about-text .about-desc {
	color: #a9a9a9;
	font-size: 20px;
}

.about-text .about-desc h2 {
	font-size: 36px;
	color: #fae102;
	text-shadow: 1px 1px 2px black;
	font-weight: 700;
	text-transform: uppercase;
	margin: 20px 0px;
}

/*---------------------
  Testimonial Section
-----------------------*/

.testimonial-section {
	background: #151515;
}

.ts_slider.owl-carousel .owl-item img {
	display: inline-block;
}

.ts_slider.owl-carousel .owl-nav button {
	height: 46px;
	width: 46px;
	color: #a9a9a9;
	background: rgba(255, 255, 255, 0.1);
	line-height: 46px;
	text-align: center;
	font-size: 24px;
	position: absolute;
	left: 30px;
	top: 50%;
	-webkit-transform: translateY(-23px);
	-ms-transform: translateY(-23px);
	transform: translateY(-23px);
}

.ts_slider.owl-carousel .owl-nav button.owl-next {
	left: auto;
	right: 30px;
}

.ts_slider .ts_item .ti_pic {
	margin-bottom: 32px;
}

.ts_slider .ts_item .ti_pic img {
	height: 200px;
	width: 200px;
	border-radius: 50%;
}

.ts_slider .ts_item .ti_text p {
	color: #fefefe;
	letter-spacing: 1px;
	margin-bottom: 20px;
}

.ts_slider .ts_item .ti_text h5 {
	color: #ffffff;
	font-weight: 600;
	text-transform: uppercase;
	margin-bottom: 8px;
}

.ts_slider .ts_item .ti_text .tt-rating i {
	font-size: 12px;
	color: #d49d09;
}

/*---------------------
  Services Section
-----------------------*/

.services-section {
	background: #151515;
}

.ss-pic img {
	height: 100%;
	min-width: 100%;
}

.ss-text {
	background: #252525;
	padding: 72px 30px;
	height: 293px;
	position: relative;
	z-index: 1;
	-webkit-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
}

.ss-text:hover {
	background: #363636;
}

.ss-text:hover a {
	color: #fae102;
}

.ss-text:hover:after {
	background: #363636;
}

.ss-text:after {
	position: absolute;
	left: -15px;
	top: 50%;
	height: 20px;
	width: 20px;
	background: #252525;
	content: "";
	-webkit-transform: rotate(45deg) translateY(-10px);
	-ms-transform: rotate(45deg) translateY(-10px);
	transform: rotate(45deg) translateY(-10px);
	z-index: -1;
	-webkit-transition: all 0.2s;
	-o-transition: all 0.2s;
	transition: all 0.2s;
}

.ss-text.second-row:after {
	left: auto;
	right: 0;
}

.ss-text h4 {
	font-size: 22px;
	color: #ffffff;
	font-weight: 600;
	margin-bottom: 10px;
}

.ss-text p {
	margin-bottom: 11px;
}

.ss-text a {
	font-size: 14px;
	color: #ffffff;
	font-weight: 700;
	text-transform: uppercase;
	-webkit-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
}

/*---------------------
  Class Timetable Section
-----------------------*/

.class-timetable-section {
	background: #151515;
}

.class-timetable-section.class-details-timetable {
	padding-top: 0;
}

.class-timetable-section .section-title {
	text-align: left;
}

.class-details-timetable_title {
	margin-bottom: 35px;
}

.class-details-timetable_title h5 {
	font-size: 20px;
	color: #ffffff;
	font-weight: 600;
}

.table-controls {
	text-align: right;
	margin-top: 14px;
	margin-bottom: 50px;
}

.table-controls ul {
	background: #000000;
	padding: 12px 30px 15px;
	display: inline-block;
}

.table-controls ul li {
	list-style: none;
	font-size: 14px;
	color: #aaaaaa;
	list-style: none;
	display: inline-block;
	margin-right: 35px;
	-webkit-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
	cursor: pointer;
	position: relative;
}
/* ... */

